# pydantic-typer

./: .{{package_name}}-copier-answers.yml  README.md  pyproject.toml
examples/: __init__.py  models.py  person.py  person_cli.py
pydantic_typer/: __about__.py  __init__.py  __main__.py  config.py
pydantic_typer/cli/: app.py  common.py  config.py  tui.py
pydantic_typer/tui/: app.py
tests/: models.py  test_person.py
