[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-typer"
description = 'A rich terminal report for coveragepy.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rich",
  "textual",
  "typer",
  "pydantic",
  "anyconfig"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/waylonwalker/pydantic-typer#readme"
Issues = "https://github.com/waylonwalker/pydantic-typer/issues"
Source = "https://github.com/waylonwalker/pydantic-typer"
Changelog = "https://github.com/waylonwalker/pydantic-typer"

[project.scripts]
pydantic-typer = "pydantic_typer.cli.app:app"

[tool.hatch.version]
path = "pydantic_typer/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "ipython",
  "mypy",
  "pyflyby",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-rich",
  "ruff",
  "black",
]
[tool.hatch.envs.default.scripts]
test = "coverage run -m pytest"
cov = "coverage-rich"
lint = "ruff pydantic_typer"
format = "black pydantic_typer"
format-check = "black --check pydantic_typer"
build-docs = "markata build"
lint-test = [
 "lint",
 "format-check",
 "test",
 "cov",
]
test-lint = "lint-test"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pydantic_typer/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = "-ra -q --rich"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage_rich]
fail-under=80
